--- a/index.html
+++ b/index.html
@@ -118,7 +118,24 @@
                 </div>
 
                 <button type="submit" class="btn btn-primary btn-full">Guardar</button>
+                <button type="button" class="btn btn-secondary btn-full" id="numistaBtnAdd">📖 Incluir desde Numista</button>
             </form>
+        </div>
+
+        <!-- Pantalla Numista -->
+        <div class="screen hidden" id="numistaScreen">
+            <header class="screen-header">
+                <button class="back-btn" id="backFromNumista">←</button>
+                <h2>Incluir desde Numista</h2>
+            </header>
+            <div class="numista-import">
+                <div class="form-group">
+                    <label>URL de Numista:</label>
+                    <input type="url" id="numistaUrl" placeholder="https://en.numista.com/catalogue/pieces12345.html">
+                </div>
+                <button class="btn btn-primary btn-full" id="parseNumistaBtn">Extraer Información</button>
+                <div class="numista-preview" id="numistaPreview"></div>
+            </div>
         </div>
 
         <!-- Pantalla Lista por País -->
