--- a/index.html
+++ b/index.html
@@ -275,8 +275,8 @@
     </div>
 
     <script>
-        // SQLite backend API - cambiar por tu URL de Render
-        window.API_URL = 'https://tu-app.onrender.com';
+        // SQLite backend API
+        window.API_URL = 'https://numismatica-7pat.onrender.com';
         window.dbReady = true;
     </script>
     <script src="countries.js"></script>
