--- a/index.html
+++ b/index.html
@@ -370,6 +370,94 @@
     <script src="countries.js"></script>
     <script src="app.js"></script>
     <script>
+        document.addEventListener('DOMContentLoaded', function() {
+            if (typeof CoinCollectionApp !== 'undefined') {
+                console.log('Inicializando aplicación...');
+                window.app = new CoinCollectionApp();
+            } else {
+                console.error('CoinCollectionApp no está definida');
+            }
+        });
+    </script>
+</body>
+</html>>
+                    <div class="photo-group">
+                        <label>Reverso:</label>
+                        <div class="photo-preview" id="editPhotoPreviewBack">
+                            <span>📷 Foto Reverso</span>
+                        </div>
+                        <input type="file" id="editPhotoInputBack" accept="image/*" hidden>
+                    </div>
+                </div>
+                
+                <div class="form-group">
+                    <label>Tipo:</label>
+                    <select id="editItemType" required>
+                        <option value="">Seleccionar...</option>
+                        <option value="moneda">Moneda</option>
+                        <option value="billete">Billete</option>
+                    </select>
+                </div>
+
+                <div class="form-group">
+                    <label>País:</label>
+                    <select id="editCountry" required>
+                        <option value="">Seleccionar país...</option>
+                    </select>
+                </div>
+
+                <div class="form-group">
+                    <label>Denominación:</label>
+                    <input type="text" id="editDenomination" placeholder="ej: 1 Dollar, 50 Centavos" required>
+                </div>
+
+                <div class="form-group">
+                    <label>Año:</label>
+                    <input type="number" id="editYear" min="1800" max="2024" required>
+                </div>
+
+                <div class="form-group">
+                    <label>Estado:</label>
+                    <select id="editCondition" required>
+                        <option value="">Seleccionar...</option>
+                        <option value="Pobre">Pobre</option>
+                        <option value="Regular">Regular</option>
+                        <option value="Bueno">Bueno</option>
+                        <option value="Muy Bueno">Muy Bueno</option>
+                        <option value="Excelente">Excelente</option>
+                        <option value="Sin Circular">Sin Circular</option>
+                    </select>
+                </div>
+
+                <div class="form-group">
+                    <label>Valor Estimado:</label>
+                    <input type="number" id="editValue" step="0.01" placeholder="0.00">
+                </div>
+
+                <div class="form-group">
+                    <label>Notas:</label>
+                    <textarea id="editNotes" placeholder="Información adicional..."></textarea>
+                </div>
+
+                <div class="form-group">
+                    <label>Enlace de Catálogo (opcional):</label>
+                    <input type="url" id="editCatalogLink" placeholder="https://ejemplo.com/catalogo/item">
+                </div>
+
+                <button type="submit" class="btn btn-primary btn-full">Actualizar</button>
+                <button type="button" class="btn btn-secondary btn-full" id="deleteItemBtn">Eliminar Item</button>
+            </form>
+        </div>
+    </div>
+
+    <script>
+        // SQLite backend API
+        window.API_URL = 'https://numismatica-7pat.onrender.com';
+        window.dbReady = true;
+    </script>
+    <script src="countries.js"></script>
+    <script src="app.js"></script>
+    <script>
         // Asegurar que la app se inicialice después de que el DOM esté listo
         document.addEventListener('DOMContentLoaded', function() {
             if (typeof CoinCollectionApp !== 'undefined') {
