--- a/index.html
+++ b/index.html
@@ -240,8 +240,8 @@
     <script src="countries.js"></script>
     <script src="app.js"></script>
     <script>
-        const API_URL = 'https://numismatica-7pat.onrender.com';
-        const app = new CoinCollectionApp();
+        window.API_URL = 'https://numismatica-7pat.onrender.com';
+        const app = new window.CoinCollectionApp();
         app.init();
     </script>
 </body>
