--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
                 </div>
                 <button type="submit" class="btn btn-primary btn-full">Guardar</button>
                 <button type="button" class="btn btn-secondary btn-full" id="numistaBtnAdd">📖 Incluir desde Numista</button>
+                <button type="button" class="btn btn-secondary btn-full" id="getNumistaImagesAdd">🖼️ Obtener imágenes de Numista</button>
             </form>
         </div>
 
@@ -232,6 +233,7 @@
                     <input type="url" id="editCatalogLink">
                 </div>
                 <button type="submit" class="btn btn-primary btn-full">Actualizar</button>
+                <button type="button" class="btn btn-secondary btn-full" id="getNumistaImagesEdit">🖼️ Obtener imágenes de Numista</button>
                 <button type="button" class="btn btn-danger btn-full" id="deleteItemBtn">Eliminar</button>
             </form>
         </div>
