--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mi Colección de Monedas</title>
+    <title>Numismática v1.0 - Colección de Monedas y Billetes</title>
     <link rel="stylesheet" href="styles.css">
     <meta name="theme-color" content="#2196F3">
 </head>
 <body>
     <div class="app">
         <header class="header">
-            <h1 id="appTitle">🪙 Mi Colección</h1>
+            <h1 id="appTitle">🪙 Numismática v1.0</h1>
         </header>
 
         <main class="main-screen" id="mainScreen">
@@ -161,6 +161,22 @@
                 </div>
                 <button class="btn btn-primary btn-full" id="searchBtn" disabled>Buscar Moneda</button>
                 <div class="search-results" id="searchResults"></div>
+            </div>
+        </div>
+
+        <div class="screen hidden" id="imageZoomScreen">
+            <header class="screen-header">
+                <button class="back-btn" id="backFromImageZoom">←</button>
+                <h2 id="imageZoomTitle">Imagen</h2>
+            </header>
+            <div class="image-zoom">
+                <div class="zoom-image-container">
+                    <img id="zoomImage" src="" alt="Imagen ampliada" style="max-width: 100%; max-height: 60vh; object-fit: contain; border-radius: 8px;">
+                </div>
+                <div class="zoom-controls">
+                    <button class="btn btn-secondary btn-full" id="changeImageBtn">🔄 Cambiar Imagen</button>
+                    <button class="btn btn-danger btn-full" id="deleteImageBtn">🗑️ Borrar Imagen</button>
+                </div>
             </div>
         </div>
 
