--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
                 <button class="btn btn-primary" id="addItemBtn">➕ Agregar</button>
                 <button class="btn btn-secondary" id="searchImageBtn">🔍 Buscar por Imagen</button>
                 <button class="btn btn-secondary" id="continentsBtn">🌍 Por Continentes</button>
+                <button class="btn btn-secondary" id="importNumistaBtn">📥 Importar de Numista</button>
             </section>
         </main>
 
@@ -161,6 +162,25 @@
                 </div>
                 <button class="btn btn-primary btn-full" id="searchBtn" disabled>Buscar Moneda</button>
                 <div class="search-results" id="searchResults"></div>
+            </div>
+        </div>
+
+        <div class="screen hidden" id="numistaImportScreen">
+            <header class="screen-header">
+                <button class="back-btn" id="backFromNumistaImport">←</button>
+                <h2>Importar de Numista</h2>
+            </header>
+            <div class="numista-import-config">
+                <div class="form-group">
+                    <label>API Key de Numista:</label>
+                    <input type="password" id="numistaApiKey" placeholder="Tu API Key de Numista">
+                </div>
+                <div class="form-group">
+                    <label>User ID de Numista:</label>
+                    <input type="text" id="numistaUserId" placeholder="Tu User ID">
+                </div>
+                <button class="btn btn-primary btn-full" id="fetchNumistaCollectionBtn">Obtener Colección</button>
+                <div class="numista-collection-results" id="numistaCollectionResults"></div>
             </div>
         </div>
 
