--- a/index.html
+++ b/index.html
@@ -171,15 +171,8 @@
                 <h2>Importar de Numista</h2>
             </header>
             <div class="numista-import-config">
-                <div class="form-group">
-                    <label>API Key de Numista:</label>
-                    <input type="password" id="numistaApiKey" placeholder="Tu API Key de Numista">
-                </div>
-                <div class="form-group">
-                    <label>User ID de Numista:</label>
-                    <input type="text" id="numistaUserId" placeholder="Tu User ID">
-                </div>
-                <button class="btn btn-primary btn-full" id="fetchNumistaCollectionBtn">Obtener Colección</button>
+                <p><strong>Conectado como:</strong> Aleaguilar (ID: 529122)</p>
+                <button class="btn btn-primary btn-full" id="fetchNumistaCollectionBtn">Obtener Mi Colección</button>
                 <div class="numista-collection-results" id="numistaCollectionResults"></div>
             </div>
         </div>
