--- a/index.html
+++ b/index.html
@@ -173,6 +173,7 @@
             <div class="numista-import-config">
                 <p><strong>Conectado como:</strong> Aleaguilar (ID: 529122)</p>
                 <button class="btn btn-primary btn-full" id="fetchNumistaCollectionBtn">Obtener Mi Colección</button>
+                <button class="btn btn-secondary btn-full" id="importCountriesBtn" style="margin-top: 0.5rem;">🌍 Importar Países de Numista</button>
                 <div class="numista-collection-results" id="numistaCollectionResults"></div>
             </div>
         </div>
