--- a/index.html
+++ b/index.html
@@ -173,8 +173,8 @@
             <div class="numista-import-config">
                 <p><strong>Conectado como:</strong> Aleaguilar (ID: 529122)</p>
                 <button class="btn btn-primary btn-full" id="fetchNumistaCollectionBtn">Obtener Mi Colección</button>
-                <button class="btn btn-secondary btn-full" id="importCountriesBtn" style="margin-top: 0.5rem;">🌍 Importar Países de Numista</button>
-                <button class="btn btn-warning btn-full" id="fixSwitzerlandBtn" style="margin-top: 0.5rem;">🔧 Corregir Items de Suiza</button>
+                <button class="btn btn-secondary btn-full" id="importCountriesBtn" style="margin-top: 0.5rem;">🌍 Agregar Países Faltantes</button>
+                <button class="btn btn-secondary btn-full" id="listCountriesBtn" style="margin-top: 0.5rem;">📜 Listar Países</button>
                 <div class="numista-collection-results" id="numistaCollectionResults"></div>
             </div>
         </div>
