--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Numismática v1.0 - Colección de Monedas y Billetes</title>
+    <title>Numismática v1.5 - Colección de Monedas y Billetes</title>
     <link rel="stylesheet" href="styles.css">
     <meta name="theme-color" content="#2196F3">
 </head>
 <body>
     <div class="app">
         <header class="header">
-            <h1 id="appTitle">🪙 Numismática v1.0</h1>
+            <h1 id="appTitle">🪙 Numismática v1.5</h1>
         </header>
 
         <main class="main-screen" id="mainScreen">
@@ -188,9 +188,12 @@
                 <div class="zoom-image-container">
                     <img id="zoomImage" src="" alt="Imagen ampliada" style="max-width: 100%; max-height: 60vh; object-fit: contain; border-radius: 8px;">
                 </div>
-                <div class="zoom-controls">
+                <div class="zoom-controls" id="zoomControls" style="display: none;">
                     <button class="btn btn-secondary btn-full" id="changeImageBtn">🔄 Cambiar Imagen</button>
                     <button class="btn btn-danger btn-full" id="deleteImageBtn">🗑️ Borrar Imagen</button>
+                </div>
+                <div class="zoom-actions">
+                    <button class="btn btn-secondary btn-full" id="showControlsBtn">⚙️ Opciones</button>
                 </div>
             </div>
         </div>
