--- a/index.html
+++ b/index.html
@@ -181,19 +181,15 @@
 
         <div class="screen hidden" id="imageZoomScreen">
             <header class="screen-header">
-                <button class="back-btn" id="backFromImageZoom">←</button>
+                <button class="back-btn" id="backFromImageZoom">❌</button>
                 <h2 id="imageZoomTitle">Imagen</h2>
             </header>
             <div class="image-zoom">
                 <div class="zoom-image-container">
                     <img id="zoomImage" src="" alt="Imagen ampliada" style="max-width: 100%; max-height: 60vh; object-fit: contain; border-radius: 8px;">
                 </div>
-                <div class="zoom-controls" id="zoomControls" style="display: none;">
-                    <button class="btn btn-secondary btn-full" id="changeImageBtn">🔄 Cambiar Imagen</button>
-                    <button class="btn btn-danger btn-full" id="deleteImageBtn">🗑️ Borrar Imagen</button>
-                </div>
                 <div class="zoom-actions">
-                    <button class="btn btn-secondary btn-full" id="showControlsBtn">⚙️ Opciones</button>
+                    <button class="btn btn-primary btn-full" id="changeImageBtn">🔄 Actualizar Imagen</button>
                 </div>
             </div>
         </div>
