--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
                 <button class="btn btn-secondary" id="searchImageBtn">🔍 Buscar por Imagen</button>
                 <button class="btn btn-secondary" id="continentsBtn">🌍 Por Continentes</button>
                 <button class="btn btn-secondary" id="importNumistaBtn">📥 Importar de Numista</button>
+                <button class="btn btn-warning" id="activateEditBtn">🔓 Activar Edición</button>
             </section>
         </main>
 
