--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
                     <div class="legend-item"><span class="legend-color" style="background: #4444ff;"></span> Solo Billetes</div>
                     <div class="legend-item"><span class="legend-color" style="background: #8844ff;"></span> Ambos</div>
                 </div>
-                <svg id="worldMapSvg" viewBox="0 0 1000 500" style="width: 100%; height: 400px; border: 1px solid #ccc;">
+                <svg id="worldMapSvg" viewBox="0 0 1000 500" style="width: 100%; height: 400px; border: 1px solid #ccc; background: #f0f8ff;">
                     <!-- Mapa mundial SVG simplificado -->
                 </svg>
             </div>
