--- a/index.html
+++ b/index.html
@@ -206,9 +206,16 @@
                     <div class="legend-item"><span class="legend-color" style="background: #4444ff;"></span> Solo Billetes</div>
                     <div class="legend-item"><span class="legend-color" style="background: #8844ff;"></span> Ambos</div>
                 </div>
-                <svg id="worldMapSvg" viewBox="0 0 1000 500" style="width: 100%; height: 400px; border: 1px solid #ccc; background: #f0f8ff;">
-                    <!-- Mapa mundial SVG simplificado -->
-                </svg>
+                <div id="mapContainer" style="width: 100%; height: 400px; border: 1px solid #ccc; background: #f0f8ff; position: relative; overflow: hidden;">
+                    <svg id="worldMapSvg" viewBox="0 0 1000 500" style="width: 200%; height: 200%; cursor: grab; transition: transform 0.3s;">
+                        <!-- Mapa mundial SVG -->
+                    </svg>
+                    <div class="zoom-controls" style="position: absolute; top: 10px; right: 10px; display: flex; flex-direction: column; gap: 5px;">
+                        <button class="btn btn-secondary" onclick="app.zoomMap(1.2)" style="padding: 5px 10px;">+</button>
+                        <button class="btn btn-secondary" onclick="app.zoomMap(0.8)" style="padding: 5px 10px;">-</button>
+                        <button class="btn btn-secondary" onclick="app.resetMapZoom()" style="padding: 5px 8px;">⌂</button>
+                    </div>
+                </div>
             </div>
         </div>
 
