--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <button class="btn btn-secondary" id="searchImageBtn">🔍 Buscar por Imagen</button>
                 <button class="btn btn-secondary" id="continentsBtn">🌍 Por Continentes</button>
                 <button class="btn btn-secondary" id="importNumistaBtn">📥 Importar de Numista</button>
-                <button class="btn btn-warning" id="activateEditBtn">🔓 Activar Edición</button>
+
             </section>
         </main>
 
@@ -84,12 +84,12 @@
                     <label>Estado:</label>
                     <select id="condition" required>
                         <option value="">Seleccionar...</option>
-                        <option value="Pobre">Pobre</option>
-                        <option value="Regular">Regular</option>
-                        <option value="Bueno">Bueno</option>
-                        <option value="Muy Bueno">Muy Bueno</option>
-                        <option value="Excelente">Excelente</option>
-                        <option value="Sin Circular">Sin Circular</option>
+                        <option value="G">G (Good)</option>
+                        <option value="VG">VG (Very Good)</option>
+                        <option value="F">F (Fine)</option>
+                        <option value="VF">VF (Very Fine)</option>
+                        <option value="XF">XF (Extremely Fine)</option>
+                        <option value="AU">AU (About Uncirculated)</option>
                     </select>
                 </div>
                 <div class="form-group">
@@ -284,12 +284,12 @@
                     <label>Estado:</label>
                     <select id="editCondition" required>
                         <option value="">Seleccionar...</option>
-                        <option value="Pobre">Pobre</option>
-                        <option value="Regular">Regular</option>
-                        <option value="Bueno">Bueno</option>
-                        <option value="Muy Bueno">Muy Bueno</option>
-                        <option value="Excelente">Excelente</option>
-                        <option value="Sin Circular">Sin Circular</option>
+                        <option value="G">G (Good)</option>
+                        <option value="VG">VG (Very Good)</option>
+                        <option value="F">F (Fine)</option>
+                        <option value="VF">VF (Very Fine)</option>
+                        <option value="XF">XF (Extremely Fine)</option>
+                        <option value="AU">AU (About Uncirculated)</option>
                     </select>
                 </div>
                 <div class="form-group">
