--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Numismática v1.8.4 - Colección de Monedas y Billetes</title>
+    <title>Numismática v1.8.5 - Colección de Monedas y Billetes</title>
     <link rel="stylesheet" href="styles.css">
     <meta name="theme-color" content="#2196F3">
 </head>
 <body>
     <div class="app">
         <header class="header">
-            <h1 id="appTitle">🪙 Numismática v1.8.4</h1>
+            <h1 id="appTitle">🪙 Numismática v1.8.5</h1>
         </header>
 
         <main class="main-screen" id="mainScreen">
@@ -190,6 +190,7 @@
                 <button class="btn btn-primary btn-full" id="fetchNumistaCollectionBtn">Obtener Mi Colección</button>
                 <button class="btn btn-secondary btn-full" id="importCountriesBtn" style="margin-top: 0.5rem;">🌍 Agregar Países Faltantes</button>
                 <button class="btn btn-secondary btn-full" id="listCountriesBtn" style="margin-top: 0.5rem;">📜 Listar Países</button>
+                <button class="btn btn-info btn-full" id="syncStatusBtn" style="margin-top: 0.5rem;">📊 Estado Sincronización</button>
                 <div class="numista-collection-results" id="numistaCollectionResults"></div>
             </div>
         </div>
