--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Numismática v1.8.6 - Colección de Monedas y Billetes</title>
+    <title>Numismática v1.8.7 - Colección de Monedas y Billetes</title>
     <link rel="stylesheet" href="styles.css">
     <meta name="theme-color" content="#2196F3">
 </head>
 <body>
     <div class="app">
         <header class="header">
-            <h1 id="appTitle">🪙 Numismática v1.8.6</h1>
+            <h1 id="appTitle">🪙 Numismática v1.8.7</h1>
         </header>
 
         <main class="main-screen" id="mainScreen">
@@ -202,9 +202,9 @@
             </header>
             <div class="map-container">
                 <div class="map-legend">
-                    <div class="legend-item"><span class="legend-color" style="background: #ff4444;"></span> Solo Monedas</div>
-                    <div class="legend-item"><span class="legend-color" style="background: #4444ff;"></span> Solo Billetes</div>
-                    <div class="legend-item"><span class="legend-color" style="background: #8844ff;"></span> Ambos</div>
+                    <div class="legend-item"><span class="legend-color" style="background: #ff0000;"></span> Solo Monedas</div>
+                    <div class="legend-item"><span class="legend-color" style="background: #0000ff;"></span> Solo Billetes</div>
+                    <div class="legend-item"><span class="legend-color" style="background: #ffdd00;"></span> Ambos</div>
                 </div>
                 <div id="mapContainer" style="width: 100%; height: 400px; border: 1px solid #ccc; background: #f0f8ff; position: relative; overflow: hidden;">
                     <svg id="worldMapSvg" viewBox="0 0 1000 500" style="width: 100%; height: 100%; cursor: grab; transition: transform 0.3s;">
